--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "学习函数式编程",
   "main": "test.js",
   "scripts": {
-    "test":  "mocha -R spec"
+    "test": "mocha --recursive -R spec" 
   },
   "keywords": [
     "webpack"
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "babel-loader": "^7.1.2",
+    "mocha": "^5.0.5",
     "should": "^13.2.1",
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1"
