--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: node_js
-cache: bundler
+cache:
+  directories:
+    - node_modules
 node_js:
     - 8.9
+before_install:
+    - npm install
 install:
-|
     npm install -g npm@latest
     npm --version
     npm install --registry http://registry.npmjs.org
 script:
-    - npm run test
+  - npm run test
+after_success:
+  - npm run coveralls
