--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --recursive --colors -R spec",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha --recursive",
-    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
+    "lint": "eslint unit test"
   },
   "keywords": [
     "webpack"
@@ -30,6 +31,7 @@
   "devDependencies": {
     "babel-loader": "^7.1.2",
     "coveralls": "^3.0.0",
+    "eslint": "^4.19.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.5",
     "should": "^13.2.1",
