--- a/.eslintrc
+++ b/.eslintrc
@@ -4,16 +4,21 @@
     node: true,
     es6: true
   },
+  "extends": "eslint:recommended",
   "globals": {
   },
   "root": true,
   "rules": {
+    "no-unused-vars": ["error", { "vars": "all", "args": "all", "ignoreRestSiblings": false }], //强制 var 
     "camelcase": 2,
-    "curly": 2,
+    "curly": "error",
     "brace-style": [2, "1tbs"],
     "quotes": [2, "single"],
     "semi": [2, "always"],
     "space-infix-ops": 2,
-    "eqeqeq": "off"
+    "eqeqeq": "off",
+    "accessor-pairs": ["error", { "getWithoutSet": true, "setWithoutGet": true }], //强制get/set
+    "block-scoped-var": "error",
+    "eqeqeq": "error" // 强制全等全不等
   }
 }
