--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --recursive --colors -R spec",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha --recursive",
     "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
-    "lint": "eslint unit test"
+    "lint": "eslint unit test",
+    "after": "npm run lint && npm run test"
   },
   "keywords": [
     "webpack"
