--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
     npm --version
     npm install --registry http://registry.npmjs.org
 script:
-  - npm run test
+  - npm run after
 after_success:
   - npm run coveralls
