--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^4.19.1",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.5",
+    "moment": "^2.22.1",
     "should": "^13.2.1",
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.9.1",
