--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "hoek": "^5.0.3",
     "lodash": "^4.17.4",
     "ramda": "^0.25.0"
   },
