--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-loader": "^7.1.2",
     "coveralls": "^3.0.0",
     "eslint": "^4.19.1",
+    "folktale": "^2.1.0",
     "husky": "^1.0.0-rc.2",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.5",
