--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "folktale": "^2.1.0",
     "husky": "^1.0.0-rc.2",
     "istanbul": "^0.4.5",
+    "jquery": "^3.3.1",
     "mocha": "^5.0.5",
     "moment": "^2.22.1",
     "should": "^13.2.1",
