--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-es2015": "^6.24.1",
     "hoek": "^5.0.3",
     "lodash": "^4.17.4",
+    "npm": "^6.1.0",
     "ramda": "^0.25.0"
   },
   "devDependencies": {
