--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jquery": "^3.3.1",
     "mocha": "^5.0.5",
     "moment": "^2.22.1",
+    "node-localstorage": "^1.3.1",
     "pg": "^7.4.3",
     "should": "^13.2.1",
     "webpack": "^3.7.1",
